# ai-rag-chat-evaluator

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  azure.yaml  config.json  dontknows.config.json  example_config.json  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  dependabot.yaml
.github/workflows/: azure-dev.yaml  bicep-audit.yml  python.yaml
core/: azure.py  error.py
example_input/: prompt_nomarkdownmention.txt  qa.jsonl
example_results/badprompt_ignoresources_1/: summary.json
example_results/baseline/: config.json  eval_results.jsonl  evaluate_parameters.json  summary.json
example_results/baseline2/: config.json  eval_results.jsonl  evaluate_parameters.json  summary.json
example_results/baseline_1/: summary.json
example_results/baseline_3/: summary.json
example_results/baseline_4/: config.json  eval_results.jsonl  evaluate_parameters.json  summary.json
example_results/generalprompt_1/: summary.json
example_results/prompt_nomarkdownmention/: config.json  eval_results.jsonl  evaluate_parameters.json  summary.json
example_results/prompt_nomarkdownmention2/: config.json  eval_results.jsonl  evaluate_parameters.json  summary.json
example_results/refinedprompt_1/: summary.json
example_results/refinedprompt_2/: summary.json
example_results/refinedprompt_trimmed_1/: summary.json
example_results/refinedprompt_trimmed_2/: summary.json
example_results/refinedprompt_trimmed_3/: summary.json
example_results/refinedprompt_trimmed_4/: summary.json
infra/: main.bicep  main.parameters.json
review_tools/: cli.py  diff_app.py  summary_app.py
scripts/: cli.py  config.json  evaluate.py  generate.py  generate_custom.txt  requirements.txt  service_setup.py
scripts/evaluate_metrics/: __init__.py  base_metric.py  builtin_metrics.py  code_metrics.py  prompt_metrics.py
scripts/evaluate_metrics/prompts/: answer_relevance.jinja2  coherence.jinja2  context_relevance.jinja2  dontknowness.jinja2  dontknowness.prompty  faithfullness.jinja2  groundedness.jinja2  mycoherence.prompty  mygroundedness.prompty  myrelevance.prompty  relevance.jinja2
scripts/tests/: test_evaluate.py  test_evaluate_metrics.py
src/evaltools/: __main__.py  cli.py  service_setup.py
src/evaltools/eval/: evaluate.py
src/evaltools/eval/evaluate_metrics/: __init__.py  base_metric.py  builtin_metrics.py  code_metrics.py  prompt_metrics.py
src/evaltools/eval/evaluate_metrics/prompts/: dontknowness.prompty  mycoherence.prompty  (+2 more)
src/evaltools/review/: answers.html  cli.py  diff_app.py  diff_markdown.py  requirements.txt  summary_app.py  summary_app.tcss  summary_markdown.py  utils.py
tests/: test_evaluate.py  test_evaluate_metrics.py
