[tool.ruff]
line-length = 120
target-version = "py39"
lint.isort.known-first-party = ["evaltools"]
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["D203"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.pytest.ini_options]
addopts = "-ra"

[project]
name = "evaltools"
version = "0.1.1"
description = "Evaluate chat applications using Azure OpenAI evaluators"
dependencies = [
    "requests",
    "python-dotenv",
    "azure-ai-evaluation==1.7.0",
    "marshmallow==3.23.2", # Older version required due to promptflow issue with _T import
    "azure-search-documents",
    "typer",
    "openai>=1.56.1", # Includes fix for httpx proxies issues
    "pandas",
    "rich",
    "jmespath",
    "textual"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "black",
    "pytest"
]

[tool.setuptools.package-data]
evaltools = ["review/*.tcss"]
